@@ -1,17 +1,17 @@
-351e2a6a3ba68fab30f98372492a87e7 *DESCRIPTION
+62461ee41466bf75244e4263f4997955 *DESCRIPTION
 0ef8f96406c8a00af43ca79028dc4761 *NAMESPACE
-5a37b8c0cce289ecf3524e5bc0ab4466 *R/class-flow.R
+8b493b009f9442c780b03176a75e0771 *R/class-flow.R
 003717d47c451b961b4c388739228ab1 *R/data.R
 b077f9988db8b37b2863bc931196c1b0 *R/events.R
 39452c64ebbb54c246f6aaf38d3adec5 *R/metrics.R
-2f8051ed698f16b436bc822337d5a7c7 *build/vignette.rds
+16959fc9f372008b047834220cbf55bb *build/vignette.rds
 a18168aae227fc93180892a713680357 *data/Events.RData
 3d5ff07c72697586d9d4e8a682c3f079 *data/Q.RData
-2e9b129598c1b01b350d0ad59d6debfd *inst/CITATION
-1f9df7857dcd0fe0a23102b4776c4e73 *inst/NEWS.Rd
+e820341035d22082eafd4f3a94ce1a59 *inst/CITATION
+818858a3d06bce59f7c27bb87cc986f6 *inst/NEWS.Rd
 7573c8f353c23c124ed3d45d30bef72d *inst/doc/hydropeak-intro.R
 48cfa970bc644d56fc3a97f51e60c170 *inst/doc/hydropeak-intro.Rmd
-3cf5bdb394ed0e789544361d380d395b *inst/doc/hydropeak-intro.html
+c8e57d21113c73ea1b9ee6ce72f5ab8c *inst/doc/hydropeak-intro.html
 bc2dff443737d41ceb6841c1af7be325 *inst/extdata/Events.csv
 f5fd1e690bb5908541f73cad8f185720 *inst/extdata/Q.csv
 09cf8a870c3fd11dab72473d5f72dd4c *man/Events.Rd
