@@ -1,12 +1,20 @@
 \name{NEWS}
 \title{News for Package 'hydropeak'}
+\section{Changes in hydropeak version 0.1.2}{
+  \itemize{
+    \item Use class `POSIXct` instead of `POSIXlt` for time in the
+    `flow` object.
+    \item Missing time steps are now correctly identified using minutes
+    as unit for `steplength`.
+  }
+}
 \section{Changes in hydropeak version 0.1.1}{
   \itemize{
     \item Rename fr() as ratio() in functions and documentation.
     \item Remove function names from Description field in DESCRIPTION.
     \item Add reference to 'hydroroute' to DESCRIPTION.
     \item Depends now on R (>= 4.1.0).
-    \item Set RoxygenNote to latest roxygen2 version.
+    \item Set RoxygenNote to latest 'roxygen2' version.
     \item First version released on CRAN: 0.1.0
   }
 }
